refactor: adapt code for new update